fix for the modal box getting cut off on <=768 high screens

--- a/fedorasummerofhardware/static/less/fedora-variables.less
+++ b/fedorasummerofhardware/static/less/fedora-variables.less
@@ -419,10 +419,6 @@ textarea#proposal {
   list-style-type: lower-alpha;
 }
 
-.modal-body {
-  max-height: 500px;
-}
-
 .modal-body p,
 .modal-body li {
   margin-bottom: .5em;
